--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ ratatui = { version = "0.29.0", features = ["all-widgets"] }
 rusqlite = { version = "0.37.0", features = ["bundled"] }
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+crossterm = "0.29.0"
