--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ rusqlite = { version = "0.37.0", features = ["bundled"] }
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 crossterm = "0.29.0"
+time = "0.3.44"
+toml = "0.9.7"
