--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ license = "MIT"
 homepage = "https://github.com/micahkepe/ferrofeed"
 repository = "https://github.com/micahkepe/ferrofeed"
 
+[[bin]]
+name = "ferrofeed"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = "1.0.99"
 clap = { version = "4.5.45", features = ["derive"] }
@@ -24,4 +28,4 @@ toml = "0.9.7"
 serde = { version = "1.0.226", features = ["derive"] }
 directories = "6.0.0"
 feed-rs = "2.3.1"
-ripgrep = "14.1.1"
+grep = "0.3.2"
